--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,14 @@ once_cell = "1.10.0"
 # num_cpus = "1.13.1"
 # prost = "0.10.3"
 retrieve = "1.1.1"
+rmp-serde = "1.1.0"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 thiserror = "1.0.31"
+toml = "0.5.9"
+
 # tia = "1.0.3"
 # tonic = "0.7.2"
-
 [build-dependencies]
 # tonic-build = "0.7"
 # build-pretty = "1.0.0"
